# swagger_output.json
@@ -524,6 +524,28 @@
         }
       }
     },
+    "/comments/user/": {
+      "get": {
+        "tags": [
+          "Comments Management"
+        ],
+        "description": "This is to get all comment by the user logged from the database.",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/comments/{id}": {
       "get": {
         "tags": [
